add all changes last

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,33 +3,26 @@ body {
 	height: 100%;
 	font-family: 'Montserrat', sans-serif;
 }
-
 .wrapper {
 	display: flex;
 	flex-direction: column;
 	min-height: 100%;
 }
-
 .main {
 	flex: 1 0 auto;
 }
 .footer {
 	flex: 0 0 auto;
 }
-
 .container{
-  max-width: 1320px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
 }
-
-
 .container-fluid{
 	max-width: 1920px;
 	margin: 0 auto;
-  }
-
-
+}
 .select {
 	height: 20px;
 	width: 45px;
@@ -42,10 +35,7 @@ body {
 }
 .select__curent {
 	padding-left: 4px;
-	@extend%m-600;
-	font-size: 16px;
-	line-height: 20px;
-	color: #fff;
+	@include text-style($white-color, 16px, 20px, 600);
 }
 .select__icon {
 	transform: rotate(0);
@@ -54,19 +44,19 @@ body {
 	margin-left: 5px;
 }
 .select__body {
-	@extend%m-600;
-	background: #F3F3F3;
+	background: $white-gray;
 	box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.25);
 	border-radius: 5px;
 	padding: 5px;
 	text-align: center;
 	display: none;
+	@include text-style($white-color, 16px, 20px, 600);
 }
 .select__item {
 	padding: 5px 5px 0 5px;
 	font-size: 16px;
 	line-height: 20px;
-	color: #000;
+	color: $dark-color;
 	cursor: pointer;
 	&:last-child{
 		padding-bottom: 5px;
@@ -81,4 +71,8 @@ body {
 }
 .select.mobile{
 	display: none;
+}
+
+.slick-slide {
+    margin-right: 20px;
 }
