--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -323,11 +323,28 @@
 // Header style
 
 // TOP section styles
+.bg-top-1 {
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    & img {
+        max-width: 1920px;
+        width: 100%;
+    }
+}
+.steps__bg {
+    display: none;
+}
+
 .top{
-    background-image: url(/images/bg/top-bg.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    
+    // background-image: url(/images/bg/top-bg.png);
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-position: center;
     &__img{
         max-width: 536px;
     }
@@ -672,7 +689,7 @@
     position: relative;
     &__background{
         position: absolute;
-        min-height: 960px;
+        min-height: 1060px;
         top: 0;
         bottom: 0;
         right: 0;
@@ -730,7 +747,7 @@
         margin-bottom: 5px;
     }
     &__descr {
-        @include text-style($orange-color, 16px, 27px, 500);
+        @include text-style($dark-color, 16px, 27px, 500);
         margin-bottom: 30px;
     }
     &__input-name{
@@ -1278,10 +1295,22 @@ p.table__checkmark-price-year{
 // TABLE section
 
 //BUISNES section
+.bg-image{
+    position: absolute;
+    z-index: 99;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    & img {
+        max-width: 1800px;
+        width: 100%;
+    }
+}
 .buisnes {
-    background-image: url(/images/bg-buisnes.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+    
+    position: relative;
+    z-index: 110;
     padding-top: 100px;
     padding-bottom: 100px;
     &__box-inner{
@@ -1345,7 +1374,34 @@ p.table__checkmark-price-year{
 //BUISNES section
 
 //YES_NO SECTION STYLE
+.bg-image-yes {
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    & img {
+        max-width: 1800px;
+        width: 100%;
+    }
+}
+.bg-image-yes-no {
+    position: absolute;
+    z-index: 0;
+    top: 50%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    & img {
+        max-width: 1800px;
+        width: 100%;
+    }
+}
+
 .yes-no {
+    z-index: 200;
+    position: relative;
     margin-bottom: 100px;
     margin-top: 100px;
     &__title {
@@ -1360,6 +1416,7 @@ p.table__checkmark-price-year{
         margin-bottom: 50px;
     }
     &__text {
+        z-index: 900;
         background: $white-color;
         box-shadow: 6px 6px 16px rgba($dark-color, 0.28);
         border-radius: 30px;
@@ -1373,6 +1430,7 @@ p.table__checkmark-price-year{
     }
     &__item-img {
         max-width: 470px;
+        z-index: 200;
     }
     &__sub-title {
         margin-bottom: 86px;
@@ -1456,6 +1514,8 @@ p.table__checkmark-price-year{
 
 //OPPORTUNITIES sytle
 .opportunities {
+    z-index: 200;
+    position: relative;
     &__bottom-title {
         @include text-style($orange-color, 24px, 29px, 700);
         margin-bottom: 10px;
@@ -1478,6 +1538,7 @@ p.table__checkmark-price-year{
         border-radius: 30px;
         padding: 30px;
         margin-right: 30px;
+        z-index: 200;
     }
     &__item{
         max-width: 570px;
@@ -1637,6 +1698,7 @@ p.table__checkmark-price-year{
 
 //DOWNOLOAD SECTION
 .downoload {
+    position: relative;
     margin-top: 190px;
     margin-bottom: 100px;
     &__inner {
@@ -1736,6 +1798,14 @@ p.table__checkmark-price-year{
         margin-top: 22px;
         margin-bottom: -3px;
     }
+    &.brand{
+        .description-card__card {
+            overflow: hidden;
+        }
+        img.description-card__img{
+            margin-bottom: -12px;
+        }
+    }
 }
 section.description-card{
     margin-bottom: 100px;
@@ -1744,6 +1814,7 @@ section.description-card{
 .qr-code__btn-app.mobile{
     display: none;
 }
+
 //Description-card SECTION
 
 //SEO SECTION
@@ -1881,19 +1952,142 @@ section.description-card{
 
 
 .coulumn {
+    margin-top: 50px;
+    margin-bottom: 100px;
+    &__inner {
+        display: flex;
+    }
+    &__item {
+        max-width: 570px;
+        width: 100%;
+        margin-right: 30px;
+        &:last-child{
+            margin-right: 0;
+        }
+    }
+    &__text-box {
+        padding: 30px;
+        background-color: #fff;
+        border-radius: 30px;
+        box-shadow: 6px 6px 16px 0px rgba(0, 0, 0, 0.28);
+    }
+    &__text-title {
+        @include text-style($orange-color, 34px, 36px, 700);
+        text-transform: uppercase;
+        margin-bottom: 10px;
+    }
+    &__text-descr {
+        @include text-style($dark-color, 16px, 20px, 500);
+    }
+    &__img {
+        margin-top: 20px;
+        max-width: 570px;
+        width: 100%;
+    }
 }
-.coulumn__inner {
+
+.mult {
+    margin-top: 100px;
+    &__inner {
+        display: flex;
+    }
+    &__img {
+        max-width: 570px;
+        width: 100%;
+    }
+    &__boxes {
+        margin-top: 100px;
+        margin-left: 30px;
+        position: relative;
+        &::before{
+            content: url(/images/top.svg);
+            position: absolute;
+            top: -165px;
+        }
+        &::after{
+            content: url(/images/bottom.svg);
+            position: absolute;
+            bottom: -80px;
+        }
+    }
+    &__box {
+        max-width: 570px;
+        width: 100%;
+        padding: 30px;
+        background-color: #fff;
+        border-radius: 30px;
+        box-shadow: 6px 6px 16px 0px rgba(0, 0, 0, 0.28);
+        margin-bottom: 40px;
+    }
+    &__title {
+        @include text-style($orange-color, 34px, 36px, 700);
+        margin-bottom: 10px;
+    }
+    &__descr {
+        max-width: 510px;
+        @include text-style($dark-color, 16px, 20px, 500);
+    }
 }
-.coulumn__item {
+
+.mission {
+    &__box {
+        padding: 30px;
+        border-radius: 30px;
+        box-shadow: 6px 6px 16px 0px rgba(0, 0, 0, 0.28);
+        background-color: #fff;
+        margin-bottom: 35px;
+        max-width: 836px;
+    }
+    &__box-title {
+        @include text-style($orange-color, 34px, 36px, 700);
+        margin-bottom: 10px;
+    }
+    &__box-descr {
+        @include text-style($dark-color, 16px, 20px, 500);
+    }
+    &__inner {
+        display: flex;
+        align-items: center;
+    }
+    &__img {
+        max-width: 570px;
+    }
+    &__item {
+        max-width: 570px;
+        padding: 30px;
+        border-radius: 30px;
+        box-shadow: 6px 6px 16px 0px rgba(0, 0, 0, 0.28);
+        background-color: #fff;
+        margin-left: 30px;
+        position: relative;
+        &::before{
+            position: absolute;
+            content: url(/images/mision-arrow.svg);
+            top: -240px;
+            left: -69px;  
+        }
+    }
+    &__item-title {
+        @include text-style($orange-color, 34px, 36px, 700);
+        margin-bottom: 10px;
+    }
+    &__item-descr {
+        @include text-style($dark-color, 16px, 20px, 500);
+    }
 }
-.coulumn__text-box {
-}
-.coulumn__text-title {
-}
-.coulumn__text-descr {
-}
-.coulumn__img {
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @import 'media';
 
